# physical-ai-humanoid-robotics-book

./: .gitignore
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
book/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
book/docs/00_front_matter/: how_to_use.mdx  lab_setup.mdx  preface.mdx  requirements.mdx  safety_guidelines.mdx
book/docs/01_module_1/: 1_1_foundations.mdx  1_2_packages.mdx  1_3_urdf.mdx  1_4_ai_controllers.mdx
book/docs/02_module_2/: 2_1_gazebo_fundamentals.mdx  2_2_sim_sensors.mdx  2_3_unity_viz.mdx  2_4_digital_twin.mdx
book/docs/03_module_3/: 3_1_isaac_sim_essentials.mdx  3_2_isaac_ros_perception.mdx  3_3_nav2.mdx  3_4_sim_to_real.mdx
book/docs/04_module_4/: 4_1_whisper_voice.mdx  4_2_llm_planning.mdx  4_3_multi_modal.mdx  4_4_capstone.mdx
book/src/components/HomepageFeatures/: index.js  styles.module.css
book/src/css/: custom.css
book/src/pages/: index.js  index.module.css
history/prompts/clarify/: 0003-no-critical-ambiguities-in-chapter-specs.clarify.prompt.md
history/prompts/constitution/: 0001-update-project-constitution-with-initial-content.constitution.prompt.md
history/prompts/plan/: 0004-generate-technical-plan-for-book-project.plan.prompt.md  0005-additional-plan-artifacts-generated-research-data-model.plan.prompt.md
history/prompts/spec/: 0002-generate-chapter-specifications-for-book.spec.prompt.md
history/prompts/tasks/: 0006-generate-actionable-dependency-ordered-tasks-for-book-project.tasks.prompt.md
isaac_sim_assets/: README.md
isaac_sim_assets/configs/: ros_bridge_config.py
isaac_sim_assets/docs/: domain_randomization_implementation.md  physical_demonstration_conceptual_plan.md  physical_demonstration_plan.md
isaac_sim_assets/isaac_sim_project/: project.json
isaac_sim_assets/isaac_sim_project/configs/: isaac_sim_config.json  physics_config.usda
isaac_sim_assets/isaac_sim_project/scenes/: basic_humanoid.usd
isaac_sim_assets/scripts/: isaac_ros_bridge_demo.py  physical_demonstration_runner.py  setup_humanoid_robot.py
isaac_sim_assets/usd/humanoid_robot/: humanoid.usda  humanoid_with_sensors.usda
isaac_sim_assets/usd/humanoid_robot/parts/: arm.usda  base_link.usda  camera.usda  head.usda  leg.usda  torso.usda
research_notes/: citations.bib
robotics_ws/src/ai_control_agent/: package.xml  setup.cfg  setup.py
robotics_ws/src/ai_control_agent/ai_control_agent/: digital_twin_test.py  gazebo_commander.py  sensor_processor.py  simple_ai_agent.py
robotics_ws/src/ai_control_agent/launch/: ai_agent_control.launch.py  sensor_simulation.launch.py
robotics_ws/src/common_msgs/: CMakeLists.txt  package.xml
robotics_ws/src/common_msgs/msg/: ControlCommand.msg  RobotState.msg  SensorData.msg
robotics_ws/src/humanoid_description/: CMakeLists.txt  package.xml
robotics_ws/src/humanoid_description/config/: simple_humanoid_controllers.yaml
robotics_ws/src/humanoid_description/launch/: display_simple_humanoid.launch.py  full_digital_twin.launch.py
robotics_ws/src/humanoid_description/rviz/: display.rviz
robotics_ws/src/humanoid_nav2_config/: CMakeLists.txt  package.xml
robotics_ws/src/humanoid_nav2_config/config/: nav2_params.yaml  slam_params.yaml
robotics_ws/src/humanoid_nav2_config/launch/: navigation_launch.py  slam_launch.py
robotics_ws/src/humanoid_nav2_config/maps/: isaac_sim_map.pgm  isaac_sim_map.yaml
robotics_ws/src/humanoid_nav2_config/scripts/: send_navigation_goal.py
robotics_ws/src/isaac_perception_examples/: package.xml  setup.py
robotics_ws/src/robot_control_basics/: package.xml  setup.cfg  setup.py
robotics_ws/src/ros_basics/: package.xml  setup.cfg  setup.py
robotics_ws/src/ros_basics/launch/: talker_listener.launch.py
robotics_ws/src/vla_llm_planner/: package.xml  setup.cfg  setup.py
robotics_ws/src/vla_llm_planner/msg/: LLMPlan.msg  (+1 more)
robotics_ws/src/vla_multi_modal/: package.xml  setup.cfg  setup.py
robotics_ws/src/vla_system_manager/: package.xml  setup.cfg  setup.py
robotics_ws/src/vla_voice_input/: package.xml  setup.cfg  setup.py
scripts/: build.sh  deploy.sh  setup.sh  verify_sensors.sh
specs/1-chapter-specs/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/1-chapter-specs/checklists/: requirements.md
unity_project/: README.md
unity_project/ Packages/: manifest.json
unity_project/Assets/Scripts/: RobotVisualizationManager.cs  RosJointStateSubscriber.cs
unity_project/ProjectSettings/: ProjectVersion.txt
(+22 files in other folders)
